# msu-cse-sdrc-codebase

./: README.md
cse-498-team-msu-sdrc-main/: .gitignore  README.md  requirements_for_depth.txt
cse-498-team-msu-sdrc-main/Local Website/: Dockerfile  Dockerfile-dev  app.py  docker-compose.yml  requirements.txt
cse-498-team-msu-sdrc-main/Local Website/flask_app/: __init__.py  routes.py
cse-498-team-msu-sdrc-main/Local Website/flask_app/static/css/: home.css
cse-498-team-msu-sdrc-main/Local Website/flask_app/templates/: home.html
cse-498-team-msu-sdrc-main/ROS2 Code/src/gnss_data/: setup.py
cse-498-team-msu-sdrc-main/ROS2 Code/src/lidar_visualizer/: setup.py
cse-498-team-msu-sdrc-main/ROS2 Code/src/loopback_test/: package.xml  setup.cfg  setup.py
cse-498-team-msu-sdrc-main/ROS2 Code/src/loopback_test/loopback_test/: loopback_test_car.py  loopback_test_laptop.py
cse-498-team-msu-sdrc-main/ROS2 Code/src/my_camera_sensor/: setup.py
cse-498-team-msu-sdrc-main/ROS2 Code/src/src_controller_publisher/: setup.cfg  setup.py
cse-498-team-msu-sdrc-main/ROS2 Code/src/src_controller_receiver/: setup.cfg  setup.py
cse-498-team-msu-sdrc-main/ROS2 Code/src/start_car/: setup.py
cse-498-team-msu-sdrc-main/ROS2 Code/src/start_laptop/: setup.py
cse-498-team-msu-sdrc-main/Raw sensor code/: camera.py  depth_camera.py  gps.py  start_car.desktop
cse-498-team-msu-sdrc-main/Raw sensor code/start_car/: start_script.py  start_script.sh
cse-498-team-msu-sdrc-main/scripts/: install_dependencies.sh
(+20 files in other folders)
